# rocFFT

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CppCheckSuppressions.txt  LICENSE.md  README.md  ValgrindSuppressions.txt  amd-rocm-rocfft.spec  custom.properties  install.sh  rmake.py  rtest.xml  toolchain-windows.cmake
.github/: CONTRIBUTING.md
.jenkins/: application.groovy  common.groovy  debug.groovy  performance.groovy  precheckin.groovy  staticanalysis.groovy  staticlibrary.groovy
clients/: CMakeLists.txt  client_utils.h  data_gen.h  fft_params.h  rocfft_params.h
clients/cmake/: FindFFTW.cmake  build-gtest.cmake  build-options.cmake
clients/rider/: CMakeLists.txt  dyna-rider.cpp  rider.cpp  rider.h
clients/samples/: CMakeLists.txt
clients/samples/fixed-16/: CMakeLists.txt  fixed-16-double.cpp  fixed-16-float.cpp  fixed-16-half.cpp
clients/samples/fixed-large/: CMakeLists.txt  fixed-large-double.cpp  fixed-large-float.cpp
clients/samples/rocfft/: CMakeLists.txt  examplekernels.h  exampleutils.h  rocfft_example_callback.cpp  rocfft_example_complexcomplex.cpp  rocfft_example_realcomplex.cpp  rocfft_example_set_stream.cpp
clients/selftest/: CMakeLists.txt  basis_vector.h  test_complex.cpp
clients/tests/: CMakeLists.txt  accuracy_test.cpp  accuracy_test.h  accuracy_test_1D.cpp  accuracy_test_2D.cpp  accuracy_test_3D.cpp  accuracy_test_adhoc.cpp  accuracy_test_callback.cpp  accuracy_test_checkstride.cpp  default_callbacks_test.cpp  fftw_transform.h  gtest_main.cpp  hermitian_test.cpp  hipGraph_test.cpp  multithread_test.cpp  random.cpp  rocfft_accuracy_test.cpp  rocfft_accuracy_test.h  rocfft_against_fftw.h  rtc_helper_crash.cpp  test_params.h  unit_test.cpp  validate_length_stride.cpp
clients/tests/cmake/: FindFFTW.cmake
clients/tests/misc/include/: test_exception.h
clients/tests/misc/source/: test_exception.cpp
cmake/: get-cli-arguments.cmake  package-functions.cmake
docs/: Doxyfile  api.rst  classification-map.xml  conf.py  index.rst  real.rst  run_doc.sh
docs/.doxygen/: Doxyfile
docs/.sphinx/: _toc.yml.in
docs/design/: bluestein.rst  buffer_assignment.rst  codegen.rst  design.rst  runtime_compilation.rst
docs/samples/: CMakeLists.txt  README.md  complex_1d.cpp  complex_2d.cpp  complex_3d.cpp  real2complex_1d.cpp  real2complex_2d.cpp  real2complex_3d.cpp
docs/source/: api.rst  conf.py  library.rst  real.rst
scripts/: solmap-version-convert.py
scripts/generator/: README.md  butterfly_constant.h  butterfly_template.h  launch.py  run-generated  stockham.cpp  timer.h
scripts/perf/: alltime.py  bargraph.asy  datagraphs.asy  histogram.asy  html_report.py  perf_unit_test.sh  rocfft-perf  rocfft-tuner  roofline.asy  stats.asy  suites.py  timing.py  utils.asy
scripts/perf/perflib/: __init__.py  accutest.py  analysis.py  build.py  docx.py  docx_emf_patch.py  generators.py  git.py  html.py  pdf.py  rider.py  specs.py  timer.py  tuner.py  utils.py
shared/: arithmetic.h  array_predicate.h  array_validator.cpp  data_gen.h  environment.h  fft_params.h  gpubuf.h  hipstream_wrapper.h  hostbuf.h  increment.h  precision_type.h  printbuffer.h  ptrdiff.h  rocfft_complex.h  rocfft_hip.h  rocfft_params.h
